--- a/MidtermProject/css/styles.css
+++ b/MidtermProject/css/styles.css
@@ -26,7 +26,7 @@ header{
 header img {
     display: block;
     margin: 0px auto;
-    padding: 10px auto;
+    padding: 10px ;
     border-radius: 10px;
     border: 2px solid whitesmoke;
     
@@ -60,7 +60,7 @@ main img {
     width: 100%;
     height: 50%;
     margin: 15px auto;
-    padding: 15px auto;
+    padding: 15px;
     border-radius: 20px;
     border: 4px solid white;
     box-shadow: 5px 15px 10px lightslategray;
