--- a/Lab6/css/styles.css
+++ b/Lab6/css/styles.css
@@ -86,7 +86,7 @@ footer {
     section, aside {
         border: 3px solid firebrick;
         padding: 20px 10px;
-        margin: 10x;
+        margin: 10px;
     }
     section {
         width: 70%;
